# catalysis-data-format

./: CHANGELOG.md  README.md  pyproject.toml
examples/reference/: EMPA__CO2RR-Example__2026-01-01__CO2RR__25degC__Example.cdf.csv  empa__ecid000000.cdf.parquet  empa__ecid000000.metadata.json
src/cdf/: __init__.py  _explore.py  _registry.py  cli.py  detect.py  fetch.py  io.py  metadata.py  ontology_labels.py  registry_ld.py  repair.py  templates.py  time.py  validate.py  visualize.py
src/cdf/data_sources/: __init__.py  base.py  base_delimited.py  basytec_txt.py  biologic_mpt.py  digatron_csv.py  excel_xlsx.py  landt_csv.py  landt_txt.py  matlab_mat.py  neware_csv.py  neware_nda.py  novonix_csv.py
src/cdf/normalize/: __init__.py  normalize.py  spec.py
src/cdf/schemas/: __init__.py
src/cdf/units/: __init__.py  core.py
tests/fixtures/: ontology_labels.ttl
tests/unit/: test_ingest.py
