[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "catalysisdf"
version = "0.1.0"
description = "Catalysis Data Format: load, convert, visualize, and publish electrolyser time-series data"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Corsin Battaglia" }]
keywords = ["catalysis", "electrolyser", "data", "time-series", "cdf", "csv", "parquet"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24,<3.0",
  "pandas>=2.0",
  "pyarrow>=15.0",
  "rdflib>=7.0",
  "typer>=0.12",
  "rich>=13.7",
  "matplotlib>=3.8",
  "plotly",
  "nbformat>=4.2",
  "openpyxl>=3.1",
  "pydantic>=2.6",
  "requests>=2.31",
  "pint>=0.22",
  "NewareNDA"
]

[project.urls]
Homepage = "https://github.com/CorsinBattaglia/catalysis-data-format"
Issues   = "https://github.com/CorsinBattaglia/catalysis-data-format/issues"

[project.scripts]
cdf = "cdf.cli:app"

[project.entry-points."cdf.data_sources"]
biologic-mpt = "cdf.data_sources.biologic_mpt:BioLogicMPT"
neware-csv   = "cdf.data_sources.neware_csv:NewareCSV"
neware-nda   = "cdf.data_sources.neware_nda:NewareNDA"
neware-nda-fast = "cdf.data_sources.neware_nda:NewareNDAFast"

[project.optional-dependencies]
fastnda = ["fastnda"]
polars = ["polars", "fastnda"]
hvplot = ["hvplot", "holoviews", "bokeh"]
numpy2 = ["numpy>=2.0,<3.0"]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "nbclient>=0.9",
  "nbformat>=5.9",
  "ipykernel>=6.0",
]
docs = [
  "sphinx>=7.0",
  "pydata-sphinx-theme>=0.15",
  "sphinx-autobuild>=2024.4.16",
  "sphinx-design>=0.6",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.hatch.build.targets.wheel]
packages = [
  "src/cdf",
]
include = [
  "src/cdf/schemas/*.json",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/cdf/**",
  "src/cdf/schemas/*.json",
  "README.md",
  "pyproject.toml",
]
